# C子模块
add_executable(c_chapter_01
#        main.c
#        video16/video16.cpp
#        video17/video17.cpp
#        video19/video19.cpp
#        video20/video20.cpp
#        video21/video21.cpp
#        video22/video22.cpp
#        video23/video23.cpp
#        video24/video24.cpp
#        video26/video26.cpp
#        video28/video28.cpp
#        video30/video30.cpp
#        video33/video33.cpp
#        video34/video34.cpp
#        video35/video35.cpp
#        video36/video36.cpp
#        video37/video37.cpp
#        video38/video38.cpp
#        video39/video39.cpp
#        video40/video40.cpp
#        video41/video41.cpp
#        video42/video42.cpp
#        video43/video43.cpp
#        video44/video44.cpp
#        video45/video45.cpp
#        video46/video46.cpp
        video47/video47.cpp
#        video48/video48.cpp
#        video49/video49.cpp
#        video50/video50.cpp
)

# 你可以添加 include 目录
target_include_directories(c_chapter_01 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
