# C子模块
add_executable(c_chapter_01
        #        main.c
        #        video16/video16.cpp
        #        video17/video17.cpp
        #        video19/video19.cpp
        #        video20/video20.cpp
        #        video21/video21.cpp
        #        video22/video22.cpp
        #        video23/video23.cpp
        #        video24/video24.cpp
        #        video26/video26.cpp
        #        video28/video28.cpp
        #        video30/video30.cpp
        #        video33/video33.cpp
        #        video34/video34.cpp
        #        video35/video35.cpp
        #        video36/video36.cpp
        #        video37/video37.cpp
        #        video38/video38.cpp
        #        video39/video39.cpp
        #        video40/video40.cpp
        #        video41/video41.cpp
        #        video42/video42.cpp
        #        video43/video43.cpp
        #        video44/video44.cpp
        #        video45/video45.cpp
        #        video46/video46.cpp
        #        video47/video47.cpp
        #        video48/video48.cpp
        #        video49/video49.cpp
        #        video50/video50.cpp
        #        video51/video51.cpp
        #                video52/video52.cpp
        #                video53/video53.cpp
        #                video54/video54.cpp
        #                video55/video55.cpp
        #        video56/video56.cpp
        #                video57/video57.cpp
        #                video58/video58.cpp
        #                video59/video59.cpp
        #                video60/video60.cpp
        #                video61/video61.cpp
        #                video62/video62.cpp
        #                video63/video63.cpp
        #                video64/video64.cpp
        #                video65/video65.cpp
        #        video66/video66.cpp
        #                video67/video67.cpp
        #        第9章
        #                chapter-09/01/video01.cpp
        #                chapter-09/02/video02.cpp
        #                chapter-09/03/video03.cpp
        #                chapter-09/04/video04.cpp
        #                chapter-09/05/video05.cpp
        #                chapter-09/06/video06.cpp
        #                chapter-09/07/video07.cpp
        #                chapter-09/08/video08.cpp
        #                chapter-09/09/video09.cpp
        #        第10章
        #                        chapter-10/01/video01.cpp
        #                        chapter-10/02/video02.cpp
        #                        chapter-10/03/video03.cpp
        #                        chapter-10/04/video04.cpp
        #                        chapter-10/05/video05.cpp
        #                        chapter-10/06/video06.cpp
        #                        chapter-10/07/video07.cpp
        #        第11章
        #                                chapter-11/01/video01.cpp
        #                                chapter-11/02/video02.cpp
        #                                chapter-11/03/video03.cpp
        #                                chapter-11/04/video04.cpp
        #                                chapter-11/05/video05.cpp
        #                                chapter-11/06/video06.cpp
        #        第12章
        #                                        chapter-12/01/video01.cpp
        #                                        chapter-12/02/video02.cpp
        #                                        chapter-12/03/video03.cpp
        #                                        chapter-12/04/video04.cpp
        #                                        chapter-12/05/video05.cpp
        #                                        chapter-12/06/video06.cpp
        #        第13章
        #                                                chapter-13/01/video01.cpp
        #                                                chapter-13/02/video02.cpp
        #                                                chapter-13/03/video03.cpp
        #                                                chapter-13/04/video04.cpp
        #                                                chapter-13/05/video05.cpp
        #                                                chapter-13/06/video06.cpp
        #                                                chapter-13/07/video07.cpp
        #                                                chapter-13/08/video08.cpp
        #                                                chapter-13/09/video09.cpp
        #        第14章
        #                                                        chapter-14/01/video01.cpp
        #                                                        chapter-14/02/video02.cpp
        #                                                        chapter-14/03/video03.cpp
        #                                                        chapter-14/04/video04.cpp
        #        第15章
        #        chapter-15/01/video01.cpp
        #                                                                chapter-15/02/video02.cpp
        #        chapter-15/03/video03.cpp
        #                                                                chapter-15/04/video04.cpp
        #        chapter-15/05/video05.cpp
        #        chapter-15/06/video06.cpp
        #                                                        chapter-15/07/video07.cpp
        #        第16章
        #        chapter-16/01/video01.cpp
        #                                                        chapter-16/02/video02.cpp
        #                                                        chapter-16/03/video03.cpp
        #                                                        chapter-16/04/video04.cpp
        #                                                        chapter-16/05/video05.cpp
        #                                                        chapter-16/06/video06.cpp
        #                                                        chapter-16/07/video07.cpp


        chapter-23/01/video01.cpp
        #        chapter-23/02/video02.cpp
        #        chapter-23/03/video03.cpp
        #        chapter-23/04/video04.cpp
        #        chapter-24/01/video01.cpp
        #        chapter-24/02/video02.cpp
        #        chapter-24/03/video03.cpp
        #        chapter-24/04/video04.cpp

)

# 你可以添加 include 目录
target_include_directories(c_chapter_01 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
